# friEnd

./: .gitignore  LICENSE  README.md  pyproject.toml
friEnd/: __init__.py  friend.py  pyff_friend.py
friEnd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
friEnd/helpers/: make_pyff_friend_df.py  write_cringe_baseline_from_fits_template.py
